--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
             <span class="icon-bars"></span>
             <span class="icon-location"></span>
           </div>
-          <input type="submit" id="submit" value="Tweetar">
+          <input type="button" onclick="publishTweet()" id="submit" value="Tweetar">
         </div>
       </div>
       <div id="feed">
         <div class="feedTweet">
           <img class="userPhoto" src="https://pbs.twimg.com/profile_images/2067911760/Untitled_4_400x400.jpg" alt="">
-          <div>
+          <div class="tweetConteiner">
             <span class="name">Dine</span>
             <span class="userName">@dinerf</span>
             <p class="publishedTweet">E aí, ficou bom?</p>
