--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <span class="icon-bars"></span>
             <span class="icon-location"></span>
           </div>
-          <input type="button" disabled onclick="publishTweet()" id="submit" value="Tweetar">
+          <input type="button" disabled onclick="setTime(); publishTweet()" id="submit" value="Tweetar">
         </div>
       </div>
       <div id="feed">
@@ -114,6 +114,7 @@
           <div class="tweetConteiner">
             <span class="name">Dine</span>
             <span class="userName">@dinerf</span>
+            <span class="now">- 16:20</span>
             <p class="publishedTweet">E aí, ficou bom?</p>
             <div class="interactOptions">
               <i class="far fa-comment"></i>
