--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div>
       <nav>
         <ul id="navOptions">
-          <li><a href="a"><span class="home icon-iconfinder-icon"></span></span> Página Inicial</a></li>
-          <li><a href="a"><span class="icon-bolt"></span> Moments</a></li>
+          <li><a href="a"><i class="home icon-iconfinder-icon"></i></span> Página Inicial</a></li>
+          <li><a href="a"><i class="icon-bolt"></i> Moments</a></li>
           <li><a href="a"><i class="far fa-bell"></i> Notificações</a></li>
           <li><a href="a"><i class="far fa-envelope"></i> Mensagens</a></li>
         </ul>
@@ -99,10 +99,10 @@
         <div id="counter">140</div>
         <div id="submitBar">
           <div class="icons">
-            <span class="icon-image"></span>
-            <span class="icon-file-gif"></span>
-            <span class="icon-bars"></span>
-            <span class="icon-location"></span>
+            <i class="icon-image"></i>
+            <i class="icon-file-gif"></i>
+            <i class="icon-bars"></i>
+            <i class="icon-location"></i>
           </div>
           <button disabled id="submit">Tweetar</button>
         </div>
@@ -173,10 +173,10 @@
         <div id="counterBox">140</div>
         <div id="submitBarBox">
           <div class="icons">
-            <span class="icon-image"></span>
-            <span class="icon-file-gif"></span>
-            <span class="icon-bars"></span>
-            <span class="icon-location"></span>
+            <i class="icon-image"></i>
+            <i class="icon-file-gif"></i>
+            <i class="icon-bars"></i>
+            <i class="icon-location"></i>
           </div>
           <button disabled id="submitBox">Tweetar</button>
         </div>
